--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
-            <a href="testimonials">Testimonials</a>
-            <a href="contact">Contact</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -108,6 +108,168 @@
             </div>
         </div>
     </section>
+
+    <section class="services" id="services">
+        <h2 class="heading">Sevices</h2>
+
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Frontend Development</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tenetur consequuntur culpa iusto illum quia omnis, fugit 
+                        accusantium. Repellat quidem reiciendis eligendi possimus 
+                        eveniet obcaecati quia corporis nostrum? Error, cupiditate 
+                        voluptate?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Backend Development</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tenetur consequuntur culpa iusto illum quia omnis, fugit 
+                        accusantium. Repellat quidem reiciendis eligendi possimus 
+                        eveniet obcaecati quia corporis nostrum? Error, cupiditate 
+                        voluptate?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Testing</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tenetur consequuntur culpa iusto illum quia omnis, fugit 
+                        accusantium. Repellat quidem reiciendis eligendi possimus 
+                        eveniet obcaecati quia corporis nostrum? Error, cupiditate 
+                        voluptate?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>UI Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tenetur consequuntur culpa iusto illum quia omnis, fugit 
+                        accusantium. Repellat quidem reiciendis eligendi possimus 
+                        eveniet obcaecati quia corporis nostrum? Error, cupiditate 
+                        voluptate?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Testimonials</h2>
+
+            <div class="wrapper">
+                <div class="testimonials-item">
+                    <img src="1.jfif" alt="">
+                    <h2>Maria</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Incidunt at voluptate reprehenderit laborum mollitia quae 
+                        aliquam sunt ullam, debitis aperiam deserunt, laudantium 
+                        laboriosam ipsam dolorem maxime dolorum molestias esse necessitatibus?
+                    </p>
+                </div>
+
+                <div class="testimonials-item">
+                    <img src="2.jfif" alt="">
+                    <h2>Julia</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Incidunt at voluptate reprehenderit laborum mollitia quae 
+                        aliquam sunt ullam, debitis aperiam deserunt, laudantium 
+                        laboriosam ipsam dolorem maxime dolorum molestias esse necessitatibus?
+                    </p>
+                </div>
+
+                <div class="testimonials-item">
+                    <img src="3.jfif" alt="">
+                    <h2>Rebeca</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Incidunt at voluptate reprehenderit laborum mollitia quae 
+                        aliquam sunt ullam, debitis aperiam deserunt, laudantium 
+                        laboriosam ipsam dolorem maxime dolorum molestias esse necessitatibus?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="#"><i class='bx bxl-github' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+        </div>
+        <ul class="list">
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Testimonials</a></li>
+        </ul>
+        <p class="copyright">
+            ©️ Michel L. Sampaio | All Rights Reserved
+        </p>
+    </footer>
+
 
     <script src="script.js"></script>
 </body>
